--- a/style.css
+++ b/style.css
@@ -1,4 +1,90 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+header {
+    background-color: #1f2937;
+}
+
+.header_small {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 128px;
+}
+
+.header_small_title h1{
+    color: #f9faf8;
+    font-size: 24px;
+}
+
+.header_small_list {
+    display: flex;
+    gap: 16px;
+    list-style-type: none;
+}
+
+.header_small_list a {
+    text-decoration: none;
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
+.header_big {
+    padding: 128px;
+    display: flex;
+    gap: 32px;
+}
+
+.header_big_left, .header_big_right {
+    flex-basis: 50%;
+}
+
+.header_big_title {
+    color: #f9faf8;
+    font-size: 48px;
+    font-weight: 800;
+}
+
+.header_big_text {
+    color: #e5e7eb;
+    font-size: 18px;
+    margin: 16px 0;
+}
+
+.header_button {
+    background-color: #3882f6;
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 18px;
+    padding: 8px 32px;
+    border-radius: 10px;
+    border-style: none;
+}
+
+.header_big_right {
+    background-color: #e5e7eb;
+}
+
+.info_title {
+    color: #1f2937;
+    font-size: 36px;
+    font-weight: 800;
+    text-align: center;
+}
+
+.quote {
+    background-color: #e5e7eb;
+}
+
+footer {
+    background-color: #1f2937;
+    padding: 32px;
+    color: #e5e7eb;
+    font-size: 18px;
+    text-align: center;
 }
